<resources>
    <string name="app_name">My CamDrive</string>
    <string name="todo">todo</string>
    <string name="camera_name">Camera name</string>
    <string name="CameraName">Camera name</string>
    <string name="camera_model">Camera model</string>
    <string name="search">search</string>
    <string name="favorite">favorite</string>
    <string name="settings">settings</string>
    <string name="test">test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camDrive">CamDrive</string>
    <string name="authorization">Авторизация</string>
    <string name="userName">имя пользователя</string>
    <string name="enterBtbText">Войти</string>
    <string name="password">пароль</string>
    <string name="check_connection">Проверьте интернет соединение!</string>
    <string name="profile">Профиль пользователя:</string>
    <string name="user">user</string>
    <string name="email">email</string>
</resources>